some basic scss setups, and some cmps editing.

--- a/frontend/src/assets/styles/setup/_variables.scss
+++ b/frontend/src/assets/styles/setup/_variables.scss
@@ -1,4 +1,12 @@
 // Colors
+// Nav-bar 
+$bgc1: #000000;
+$bgc2: #121212;
+
+// Text
+$txt1: #b3b3b3;
+$txt2: #ffffff;
+
 $clr1: #ce2e6c;
 $clr2: #4f3a65;
 $clr3: #574f7d;
