--- a/frontend/src/assets/styles/setup/_typography.scss
+++ b/frontend/src/assets/styles/setup/_typography.scss
@@ -6,3 +6,5 @@
     // font-family: montserrat;
     // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
 }
+// @import '../../fonts/Montserrat/static/Montserrat-SemiBold.ttf'
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
