--- a/frontend/src/assets/styles/setup/_variables.scss
+++ b/frontend/src/assets/styles/setup/_variables.scss
@@ -8,6 +8,10 @@ $bgc2: #121212;
 $txt1: #b3b3b3;
 $txt2: #ffffff;
 
+//font
+$txtf: 'Montserrat', sans-serif;
+
+
 $clr1: #ce2e6c;
 $clr2: #4f3a65;
 $clr3: #574f7d;
