--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -8,20 +8,21 @@
 }
 
 html {
-    font-family: montserrat;
+    font-family: $txtf;
     line-height: 1.6;
     color: $clr2;
 }
 
 body {
     font-size: rem(14px);
+    font-family: $txtf;
     margin: 0;
     max-width: 1024px;
     margin: auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: caveat;
+    // font-family: caveat;
     margin: 0 0 0.6em;
     line-height: 1;
 }
