--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -3,14 +3,14 @@
 }
 
 ::selection {
-    background-color: $clr1;
-    color: $clr6;
+    background-color: $bgc1;
+    color: $txt1;
 }
 
 html {
     font-family: $txtf;
     line-height: 1.6;
-    color: $clr2;
+    color: $txt2;
 }
 
 body {
