--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -41,13 +41,13 @@
     }
 
     nav a:not(:first-child) {
-        border-top: 1px solid $clr1;
+        border-top: 1px solid $bgc4;
         padding: 0 5px;
         margin: 10px;
     }
 
     nav .active {
-        color: $clr1;
+        color: $bgc5;
     }
 
 }
