--- a/frontend/src/assets/styles/setup/_variables.scss
+++ b/frontend/src/assets/styles/setup/_variables.scss
@@ -5,22 +5,35 @@ $bgc1: #000000;
 $bgc2: #121212;
 
 // Text
-$txt1: #b3b3b3;
-$txt2: #ffffff;
+$txt1: #b3b3b3; //main fill
+$txt2: #ffffff; //selected page in navbar
+
+//player
+$bgc3: #1ed760;
+
+//playlist-goodmorning
+// $bgc4: #000000, opacity 70.0%
+$bgc4: #00000070;
+
+//playlist-grid
+$bgc5: #282828;
+
+//footer-player
+$bgc6: #181818;
 
 //font
 $txtf: 'Montserrat', sans-serif;
 
 
-$clr1: #ce2e6c;
-$clr2: #4f3a65;
-$clr3: #574f7d;
-$clr4: #95adbe;
-$clr5: #dff0ea;
-$clr6: #fff;
-$clr7: #222;
-$clr9: #aaaaaa;
-$clr8: #574f7e;
+// $clr1: #ce2e6c;
+// $clr2: #4f3a65;
+// $clr3: #574f7d;
+// $clr4: #95adbe;
+// $clr5: #dff0ea;
+// $clr6: #fff;
+// $clr7: #222;
+// $clr9: #aaaaaa;
+// $clr8: #574f7e;
 
 
 // Breakpoints
