--- a/frontend/src/assets/styles/views/_review-app.scss
+++ b/frontend/src/assets/styles/views/_review-app.scss
@@ -3,13 +3,13 @@
     display: flex;
     flex-wrap: wrap;
     li {
-        background-color: $clr2;
-        color: $clr6;
+        background-color: $bgc2;
+        color: $txt1;
         padding: 5px;
         margin: 5px;
     }
     a {
-        color: $clr1;
+        color: $txt2;
         padding: 10px;
     }    
     h3 {
