--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -1,5 +1,5 @@
 .app-header {
-    background-color: $clr4;
+    background-color: $bgc5;
     padding: 10px;
 
 
@@ -7,11 +7,11 @@
         // background-color: $clr2;
         // padding: 2px 8px;
         padding-left: 100px;
-        color: $clr1;
+        color: $txt1;
 
         .score {
-            background-color: $clr2;
-            color: $clr6;
+            background-color: $bgc4;
+            color: $txt2;
             padding: 8px;
             margin: 10px;
             border-radius: 50%;
@@ -26,12 +26,12 @@
     }
 
     .user-info .btn-link {
-        color: $clr2;
+        color: $txt1;
     }
 
     nav {
         font-size: .8em;
-        background-color: $clr5;
+        background-color: $bgc3;
         padding: 5px;
 
     }
