--- a/frontend/src/assets/styles/basics/_forms.scss
+++ b/frontend/src/assets/styles/basics/_forms.scss
@@ -1,6 +1,6 @@
 button {
     border:0;
-    background-color: $bgc3;
+    background-color: $bgcplay;
     color:whitesmoke;
     padding: 5px 10px;
     margin: 5px;
@@ -20,6 +20,6 @@ form > * {
     transition: .5s;
 }
 .btn-link:hover {
-    background-color: $bgc2;
+    background-color: $bgcmain;
     transform: scale(1.1);
 }
