--- a/frontend/src/assets/styles/cmps/_user-msg.scss
+++ b/frontend/src/assets/styles/cmps/_user-msg.scss
@@ -12,7 +12,7 @@
     border:0;
     border-radius: 50%;
     margin: 5px;
-    background-color: $bgc6;
+    background-color: $bgcplayer;
 }
 
 .user-msg.success {
