--- a/frontend/src/assets/styles/views/_about-us.scss
+++ b/frontend/src/assets/styles/views/_about-us.scss
@@ -22,18 +22,39 @@
     transform: scale(1.3);
 }
   
-.example-leave.example-leave-active {
-    opacity: 0.01;
-    transform: scale(1);
-    transition: all 300ms ease-in;
+// .example-leave.example-leave-active {
+//     opacity: 0.01;
+//     transform: scale(1);
+//     transition: all 300ms ease-in;
+// }
+
+// .proj-preview {
+//     background-color: teal;
+//     color: whitesmoke;
+//     padding: 5px;
+//     margin: 3px;
+// }
+
+.about{
+    background-color: $bgcplaylistdown;
 }
 
-.proj-preview {
-    background-color: teal;
-    color: whitesmoke;
-    padding: 5px;
-    margin: 3px;
+h3{
+    color: $txtfill
 }
 
+p{
+    color: $txtselected;
+}
 
+// .shelly{
 
+// }
+
+// .dana{
+
+// }
+
+// .shahak{
+
+// }
