--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -1,6 +1,7 @@
 .main-container {
     display: grid;
-    grid-template-columns: 20px 1fr 20px;
+    grid-template-columns: 230px 1fr;
+    // grid-template-columns: 20px 1fr 20px;
 
     > * {
         grid-column: 2;
