--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -4,10 +4,10 @@
     height: 100%;
     background-color: $bgcnav;
     width: 230px;
-    position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
+    grid-area: "navbar";
 }
 
 .nav-link {
