--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -10,10 +10,12 @@
     grid-area: "app-header";
 }
 
+
 .btn-icon{
     height: 16px;
-    width: 16px;background-color: $bgcmain;
+    width: 16px;
     display: inline;
+    background-color: $bgcmain;
 
 }
 
@@ -23,7 +25,7 @@
     height: 64px;
     padding: 16px;
     padding-inline-end: 16px;
-    position: relative;
+    position: fixed;
     width: 100%;
     z-index: 10;
 }
