--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -15,7 +15,7 @@
     text-transform: none;
     display: block;
     height: 40px;
-    padding: o 16px;
+    padding: 0 16px;
     cursor: pointer;
     gap: 16px;
     justify-content: center;
