--- a/frontend/src/assets/styles/basics/_forms.scss
+++ b/frontend/src/assets/styles/basics/_forms.scss
@@ -1,6 +1,6 @@
 button {
     border:0;
-    background-color: $bgcplay;
+    background-color: $bgcmain;
     color:whitesmoke;
     padding: 5px 10px;
     margin: 5px;
