--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -1,17 +1,12 @@
 .side-navbar {
-    // display: flex;
-    // flex-direction: column;
     height: 100%;
     background-color: $bgcnav;
     width: 230px;
-    z-index: 1;
-    top: 0;
-    left: 0;
     grid-area: "navbar";
+    grid-row: 1 / -1;
 }
 
 .nav-link {
-    display: flex;
     text-transform: none;
     display: block;
     height: 40px;
