--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -1,4 +1,5 @@
 .main-layout {
+    height: 100vh;
     display: grid;
     grid-template-areas:
     "navbar app-header"
@@ -8,30 +9,39 @@
     grid-template-rows: auto 1fr auto;
     
     > * {
-        grid-column: 2;
+        // grid-column: 2;
 
-        &.full {
-            grid-column: 1 /-1;
-        }
+        // &.full {
+        //     grid-column: 1 /-1;
+        // }
     }
 
     @include for-narrow-layout {
         grid-template-columns: 
-            minmax(20px, 1fr)
-            minmax(auto, $mobile-breakpoint)
-            minmax(20px, 1fr);
+        "navbar app-header"
+        "navbar main"
+        "player player";
+            // minmax(20px, 1fr)
+            // minmax(auto, $mobile-breakpoint)
+            // minmax(20px, 1fr);
     }
     @include for-normal-layout {
         grid-template-columns: 
-            minmax(20px, 1fr)
-            minmax(auto, $narrow-breakpoint)
-            minmax(20px, 1fr);
+        "navbar app-header"
+        "navbar main"
+        "player player";
+        // minmax(20px, 1fr)
+        // minmax(auto, $narrow-breakpoint)
+        // minmax(20px, 1fr);
     }
     @include for-wide-layout {
         grid-template-columns: 
-            minmax(20px, 1fr)
-            minmax(auto, $normal-breakpoint)
-            minmax(20px, 1fr);
+        "navbar app-header"
+        "navbar main"
+        "player player";
+        // minmax(20px, 1fr)
+        // minmax(auto, $normal-breakpoint)
+        // minmax(20px, 1fr);
     }
 }
 
