--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -1,11 +1,11 @@
 .top-bar-container{
-    // height: 64px;
-    min-width: 0;
+    height: 64px;
+    // min-width: 0;
     pointer-events: none;
     border: 0;
     padding: 0;
     margin: 0;
-    vertical-align: baseline;
+    // vertical-align: baseline;
     background-color: $bgcmain;
     grid-area: "app-header";
 }
