--- a/frontend/src/assets/styles/main.scss
+++ b/frontend/src/assets/styles/main.scss
@@ -30,7 +30,7 @@
 @import "cmps/app-header";
 @import "cmps/app-navbar";
 @import "cmps/app-player";
-@import "cmps/app-playlist";
+@import "cmps/app-station";
 @import "cmps/user-msg";
 
 
