--- a/frontend/src/assets/styles/cmps/_app-player.scss
+++ b/frontend/src/assets/styles/cmps/_app-player.scss
@@ -1,4 +1,11 @@
 .app-player{
     grid-area: "player";
     background-color: red;
+    height: 200px;
+}
+
+
+.app-playerS{
+    background-color: red;
+    height: 100px;
 }
