--- a/frontend/src/assets/styles/basics/_helpers.scss
+++ b/frontend/src/assets/styles/basics/_helpers.scss
@@ -7,6 +7,11 @@
 .fs28 { font-size: rem(28px); }
 .fs30 { font-size: rem(30px); }
 
+//grid
+.grid{
+    display: grid;
+}
+
 // flex helpers
 
 .flex {
