--- a/frontend/src/assets/styles/cmps/_app-player.scss
+++ b/frontend/src/assets/styles/cmps/_app-player.scss
@@ -3,6 +3,16 @@
     background-color: red;
     height: 100px;
     bottom: 0;
+    justify-content: space-between;
+}
+
+.icon-player{
+    fill: white;
+}
+
+
+.fa.facebook::before {
+    content: "\f39e";
 }
 
 
@@ -23,9 +33,10 @@
 
 .volume-controller{
     background-color: blue;
+    min-width: 150px;
 }
 
 .video-player{
-    opacity: 0;
+    // opacity: 0;
     // width: 1px;
 }
