station list display

--- a/frontend/src/assets/styles/views/_home-page.scss
+++ b/frontend/src/assets/styles/views/_home-page.scss
@@ -1,4 +1,8 @@
-.home{
+// includes all the stations elements
+
+.main-container{
+    height: 100%;
+    // display: flex;
     background-color: $bgcplayer;
     color: $txtfill;
 }
