--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -7,6 +7,7 @@
     "player player";
     grid-template-columns: auto 1fr;
     grid-template-rows: auto 1fr auto;
+    padding: 0;
     
     > * {
         // grid-column: 2;
@@ -15,6 +16,7 @@
         //     grid-column: 1 /-1;
         // }
     }
+
 
     @include for-narrow-layout {
         grid-template-columns: 
@@ -45,9 +47,9 @@
     }
 }
 
-.card-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 20px;
-}
+// .card-grid {
+//     display: grid;
+//     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+//     grid-gap: 20px;
+// }
 
