--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -18,6 +18,12 @@
     width: 100%;
 }
 
+.searchInput-container{
+    width: 364px;
+    height: 40px;
+    background-color: white;
+}
+
 .btn-icon{
     height: 32px;
     width: 32px;
