--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -6,6 +6,10 @@
     grid-row: 1 / -1;
 }
 
+ul{
+    list-style-type: none;
+}
+
 .nav-link {
     text-transform: none;
     display: block;
@@ -15,6 +19,10 @@
     gap: 16px;
     justify-content: center;
     align-items: center;
+
+    &-logo{
+        padding-bottom: 20px;
+    }
 
     // &.active{
     //     color: $txtselected;
