--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -31,7 +31,7 @@
 }
 
 .search-key-btn{
-    background-color: white;
+    background-color: transparent;
     color: black;
     font-size: 20px;
     // transform: scale(-1, 1);
