--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -19,6 +19,14 @@
     
 }
 
+.fa-circle-chevron-left{
+    height: 45px;
+    width: 45px;
+    color: black;
+    background-color: white;
+
+}
+
 .searchInput-container{
     width: 364px;
     height: 40px;
