--- a/frontend/src/assets/styles/cmps/_app-player.scss
+++ b/frontend/src/assets/styles/cmps/_app-player.scss
@@ -1,7 +1,7 @@
 .app-playerS {
     grid-area: "player";
-    background-color: red;
-    height: 400px;
+    background-color: $bgcmain;
+    height: 90px;
     bottom: 0;
     justify-content: space-between;
     position: fixed;
@@ -9,12 +9,12 @@
 }
 
 
-.player-video{
+.player-video {
     width: 100px;
 }
 
 
-.icon-player{
+.icon-player {
     fill: white;
 }
 
@@ -25,8 +25,9 @@
 
 
 .song-details {
-    background-color: rgb(164, 53, 72);
-    justify-content: flex-start;
+    // background-color: rgb(164, 53, 72);
+    // justify-content: flex-start;
+    align-items: center;
 }
 
 .song-img {
@@ -35,16 +36,37 @@
 }
 
 
-.actions{
-    background-color: rgb(172, 37, 59);
+.player-actions-container {
+    // background-color: rgb(172, 37, 59);
+    align-items: center;
 }
 
-.volume-controller{
-    background-color: rgb(233, 106, 127);
+.player-actions{
+    gap:3px;
+}
+.player-btn-play-pause{
+    background-color: transparent;
+}
+.btn-next{
+    transform: scale(-1, 1);
+}
+
+.volume-controller {
+    // background-color: rgb(233, 106, 127);
     min-width: 150px;
+    // justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+}
+.volume-icon{
+    font-size: 13.333px;
+}
+.volume-range {
+    width: 93px;
 }
 
-.video-player{
+.video-player {
     // opacity: 0;
     // width: 1px;
 }
