home page styling

--- a/frontend/src/assets/styles/views/_home-page.scss
+++ b/frontend/src/assets/styles/views/_home-page.scss
@@ -1,8 +1,24 @@
-// includes all the stations elements
+// includes all the stations elements in home page
 
-.main-container{
-    height: 100%;
-    // display: flex;
-    background-color: $bgcplayer;
-    color: $txtfill;
+.main-home-container{
+
+
+    .home-stations-container{
+        
+        .first-station-cards{
+            padding: 5px;
+            margin: auto;
+            width: 100%;
+        
+            display: grid;
+            grid-template-columns: repeat(3, minmax(242px, 1fr));
+            grid-gap: 10px;
+            
+        }
+
+        .second-station-cards{
+            
+        }
+        
+    }
 }
