--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -47,6 +47,12 @@
     }
 }
 
+.main-app-container{
+    height: 100%;
+    background-color: $bgcplayer;
+    color: $txtfill;
+}
+
 // .card-grid {
 //     display: grid;
 //     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
