--- a/frontend/src/assets/styles/cmps/_app-station.scss
+++ b/frontend/src/assets/styles/cmps/_app-station.scss
@@ -1,12 +1,6 @@
 .stations-cards{
-    padding: 5px;
-    margin: auto;
-    width: 100%;
-
-    display: grid;
-    grid-template-columns: repeat(3, minmax(242px, 1fr));
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(155px, 1fr))
+  
+    // grid-template-columns: repeat(3ת auto-fit, minmax(242px, 1fr))
     
     
 }
