--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -14,9 +14,9 @@ ul{
     text-transform: none;
     display: block;
     height: 40px;
-    padding: 0 16px;
+    // padding: 0 16px;
     cursor: pointer;
-    gap: 16px;
+    // gap: 16px;
     justify-content: center;
     align-items: center;
 
