--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -19,10 +19,12 @@
 }
 
 .fa-circle-chevron-left{
-    height: 45px;
-    width: 45px;
+    // height: 47px;
+    // width: 47px;
     color: black;
     background-color: white;
+    border-radius: 50%;
+    font-size: 47px;
 
 }
 
