--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -19,13 +19,12 @@
 }
 
 .fa-circle-chevron-left{
-    // height: 47px;
-    // width: 47px;
+    height: 47px;
+    width: 47px;
     color: black;
     background-color: white;
     border-radius: 55%;
     font-size: 47px;
-
 }
 
 .searchInput-container{
