--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -21,7 +21,7 @@
 .fa-circle-chevron-left{
     height: 47px;
     width: 47px;
-    color: black;
+    color: rgb(0, 0, 0);
     background-color: white;
     border-radius: 55%;
     font-size: 47px;
