--- a/frontend/src/assets/styles/cmps/_app-station.scss
+++ b/frontend/src/assets/styles/cmps/_app-station.scss
@@ -20,6 +20,10 @@
         border: 0;
         background-color: $bgcplaylistup;
 
+        &:hover{
+            background-color: ligthen($bgcplaylistup,20%);
+        }
+
     }
 
     .song-img {
