--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -18,13 +18,18 @@
     
 }
 
+// .fa-solid{
+//     background-color: $txtselected;
+//     color: $bgcnav;
+// }
+
 .fa-circle-chevron-left{
-    height: 47px;
-    width: 47px;
-    color: rgb(0, 0, 0);
+    height: 30px;
+    width: 30px;
+    color: black;
     background-color: white;
     border-radius: 55%;
-    font-size: 47px;
+    font-size: 30px;
 }
 
 .searchInput-container{
