--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -18,6 +18,11 @@ span {
     font-size: 15px;
 }
 
+svg{
+    // background-color: white;
+    fill: white;
+}
+
 .fa-solid {
     // background-color: $txtselected;
     color: $txtselected;
