--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -48,7 +48,9 @@ svg{
     border-radius: 20px;
     margin-top: 9px;
 }
-
+.search-key-icon{
+    color: black !important;
+}
 .search-key-btn{
     background-color: transparent;
     color: black;
