--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -2,6 +2,23 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    width: 16px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(190, 47, 47, 0)
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #b3b3b300;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #b3b3b3;
+}
+
+
 ::selection {
     background-color: $bgcnav;
     color: $txtfill;
