player functions + service

--- a/frontend/src/assets/styles/cmps/_app-player.scss
+++ b/frontend/src/assets/styles/cmps/_app-player.scss
@@ -80,7 +80,7 @@
 }
 
 .player-video {
-    opacity: 0;
-    width: 1px;
-    width: 0px;
+    // opacity: 0;
+    // width: 1px;
+    // width: 0px;
 }
