--- a/frontend/src/assets/styles/cmps/_song-list.scss
+++ b/frontend/src/assets/styles/cmps/_song-list.scss
@@ -1,14 +1,26 @@
-.song-list {
-    // background-color: pink;
+.song-list-container {
+    background-color: rgb(92, 73, 77);
+
+    &.header-song-list {
+        grid-template-columns: 3fr 20fr 5fr 5fr 7.5fr;
+
+    }
+
+    & ul {
+        padding: 0px;
+    }
 }
 
-.song-list-tbody {
-    color: white;
+.song-list-li {
+    grid-template-columns: 3fr 20fr 5fr 5fr 7.5fr;
+
 }
 
-.song-list-tbodyHashtag {
-    width: 30px;
+.header-song-list {
+    grid-template-columns: 3fr 20fr 5fr 5fr 7.5fr;
 }
+
+
 
 .btn-song-title-play {
     all: unset;
