--- a/frontend/src/assets/styles/cmps/_app-player.scss
+++ b/frontend/src/assets/styles/cmps/_app-player.scss
@@ -1,7 +1,7 @@
 .app-playerS {
     grid-area: "player";
     background-color: $bgcmain;
-    height: 90px;
+    height: 300px; //#################################
     bottom: 0;
     justify-content: space-between;
     position: fixed;
