--- a/frontend/src/assets/styles/cmps/_station-details.scss
+++ b/frontend/src/assets/styles/cmps/_station-details.scss
@@ -1,12 +1,52 @@
-.station-details{
-    display: flex;
-    padding: 30px;
+.station-details {
+    display: grid;
+    height: 100%;
+    width: 100%;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    vertical-align: baseline;
 
-    .img-container{
-        object-fit: cover;
-        // aspect-ratio: 1 / 1 ;
+   
 
-        width: 190px;
-        height: 190px;
+    .img-container {
+        width: 230px;
+        height: 230px;
+        box-shadow: rgba(0, 0, 0, 0.5) 0px 4px 60px 0px;
+        display: flex;
+        margin: 5vw;
+
+        img {
+            object-fit: cover;
+            aspect-ratio: 1 / 1;
+        }
+
     }
+
+    .info-container {
+        // height: 230px;
+        // width: auto;
+        display: flex;
+        position: relative;
+        flex-flow: column;
+        flex: 1;
+        left: 320px;
+        bottom: 200px;
+        z-index: 0;
+
+
+        h2 {
+            font-size: 10px;
+        }
+
+        h1 {
+            font-size: 4rem;
+        }
+
+        p {
+            font-size: 16px;
+        }
+
+    }
+
 }
