--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -11,12 +11,18 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #b3b3b300;
+    background-color: #ffffff00;
 }
 
+::-webkit-scrollbar-thumb:active {
+    background-color: #c7c4c4;
+    
+}
 ::-webkit-scrollbar-thumb:hover {
     background-color: #b3b3b3;
 }
+
+
 
 
 ::selection {
