--- a/frontend/src/assets/styles/main.scss
+++ b/frontend/src/assets/styles/main.scss
@@ -31,9 +31,10 @@
 @import "cmps/app-navbar";
 @import "cmps/app-player";
 @import "cmps/app-station";
-@import "./cmps/station-details";
+@import "cmps/station-details";
+@import "cmps/app-search";
 @import "cmps/user-msg";
-@import "cmps/song-list"
+@import "cmps/song-list";
 
 
 
