--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -8,6 +8,10 @@
     grid-template-columns: auto 1fr;
     grid-template-rows: auto 1fr auto;
     padding: 0;
+    grid-gap: 10px;
+    max-height: 500px;
+    max-width: 100%;
+    overflow-y: auto; 
     
     > * {
         // grid-column: 2;
