--- a/frontend/src/assets/styles/cmps/_app-search.scss
+++ b/frontend/src/assets/styles/cmps/_app-search.scss
@@ -3,25 +3,38 @@
     padding-left: 20px;
     padding-right: 20px;
     display: grid;
-    h2{
+
+    h2 {
         margin-bottom: 20px;
+        color: #fff;
     }
-    
+
     .filter-cards-container {
         height: 100vh;
 
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(157px, 1fr));
-        grid-auto-rows: auto;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
         gap: 24px;
-        
-        .filter-card{
+
+
+
+        .filter-card {
             background-color: rgb(66, 62, 62);
-            padding: 16px;
+
             border-radius: 5px;
-            min-height: 157px;
-            max-height: 220px;
+            padding-bottom: 65%;
         }
-        .filter-img {}
+
+        h3 {
+            padding-left: 16px;
+            padding-right: 16px;
+            padding-top: 16px;
+        }
+    
+        .filter-img {
+            padding-left: 16px;
+            padding-right: 16px;
+            padding-top: 16px;
+        }
     }
 }
