--- a/frontend/src/assets/styles/cmps/_song-list.scss
+++ b/frontend/src/assets/styles/cmps/_song-list.scss
@@ -1,5 +1,5 @@
 .song-list-container {
-    background-color: rgb(92, 73, 77);
+    background-color: black;
 
     &.header-song-list {
         grid-template-columns: 3fr 20fr 5fr 5fr 7.5fr;
