--- a/frontend/src/assets/styles/cmps/_station-details.scss
+++ b/frontend/src/assets/styles/cmps/_station-details.scss
@@ -8,7 +8,9 @@
     padding: 0;
     vertical-align: baseline;
 
-   
+    background-image: linear-gradient(red, black);
+
+
 
     .img-container {
         width: 230px;
