--- a/frontend/src/assets/styles/cmps/_app-station.scss
+++ b/frontend/src/assets/styles/cmps/_app-station.scss
@@ -20,7 +20,7 @@
         border: 0;
         background-color: $bgcplaylistup;
 
-        &:hover{
+        &hover{
             background-color: ligthen($bgcplaylistup,20%);
         }
 
