--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -9,7 +9,7 @@
     grid-template-rows: auto 1fr auto;
     padding: 0;
     grid-gap: 10px;
-    max-height: 500px;
+    // max-height: 500px;
     max-width: 100%;
     overflow-y: auto; 
     
