--- a/frontend/src/assets/styles/cmps/_station-details.scss
+++ b/frontend/src/assets/styles/cmps/_station-details.scss
@@ -7,40 +7,78 @@
     margin: 0;
     padding: 0;
     vertical-align: baseline;
-
     background-image: linear-gradient(red, black);
+}
 
-    .top-container{
+.top-container{
+    display: flex;
+    .img-container {
+        width: 230px;
+        height: 230px;
+        box-shadow: rgba(0, 0, 0, 0.5) 0px 4px 60px 0px;
         display: flex;
-        .img-container {
-            width: 230px;
-            height: 230px;
-            box-shadow: rgba(0, 0, 0, 0.5) 0px 4px 60px 0px;
-            display: flex;
-            margin: 5vw;
-            object-fit: cover;
-            aspect-ratio: 1 / 1;
+        margin: 5vw;
+        object-fit: cover;
+        aspect-ratio: 1 / 1;
+    }
+    .info-container {
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        align-items: flex-start;
+        color: $txtselected;
+       
+        h2 {
+            font-size: 10px;
         }
-        .info-container {
-            // position: relative;
-            flex-flow: column;
-            flex: 1;
-            color: $txtselected;
-           
-            // h2 {
-            //     font-size: 10px;
-            // }
-    
-            // h1 {
-            //     font-size: 4rem;
-            // }
-    
-            // p {
-            //     font-size: 16px;
-            // }
+
+        h1 {
+            font-size: 4rem;
         }
+
+        p {
+            font-size: 16px;
+        }
+    } 
+}
+
+.details-controls{
+    display: flex;
+    .btn-play{
+        display: flex;
+        height: 50px;
+        width: 50px;
+        background-color: transparent;
+        background-color: $bgcplay;
+        align-items: center;
+        border-radius: 50%;
+        .btn-play-out{
+            align-items: center;
+            justify-content: center;
+        }
+        
+        .btn-play-in{
+            // bgc: black;
+        }
+
+        svg{
+            // align-items: center;
+            // justify-content: center;
+            // display: inline-flex;
+            position: absolute;
+            fill: black;
+        }
+        
+        
     }
 
+    .btn-like{
+        background-color: transparent;
+        
+    }
+    
+    .btn-options{
+        background-color: transparent;
 
-
+    }
 }
